--- a/index.html
+++ b/index.html
@@ -8,15 +8,114 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Homework 8</title>
 
-    <!-- Bootstrap -->
-    <link href="bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+
+
+
+    <style>
+        body {
+            background-image: url(bk.jpg);
+            background-size: cover;
+        }
+
+    </style>
 </head>
 
 <body>
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <form class="form-inline" role="form">
+                    <h4 class="text-center">Stock Market Search</h4>
+                    <div class="form-group">
+                        <label class="control-label">
+                            Enter the stock name or symbol:<span style="color:red;">*</span>
+                        </label>
+
+                        <input type="text" class="form-control" name="company" placeholder="Apple Inc or AAPL" required autofocus>
+
+                    </div>
+                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span> Get Quote</button>
+                    <button type="reset" class="btn btn-default" onclick="resetForm()"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
+                </form>
+
+                <div class="pull-right">
+                    <label class="control-label">Powered By: </label>
+                    <a href="https://www.markit.com/product/markit-on-demand"><img src="http://cs-server.usc.edu:45678/hw/hw8/images/mod-logo.png" height="22" width="200"></a>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <label>Favorite List</label>
+                        <div class="pull-right">
+                            Automatic Refresh:
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span></button>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">
+                        <div class="pull-left">
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left"></span></button>
+                        </div>
+                        <label>Stock Details</label>
+
+                    </div>
+                    <div class="panel-body">
+                        <ul class="nav nav-pills">
+                            <li class="active"><a data-toggle="pill" href="#currentStock"><span class="glyphicon glyphicon-dashboard"></span> Current Stock</a></li>
+                            <li><a data-toggle="pill" href="#historicalCharts"><span class="glyphicon glyphicon-stats"></span> Historical Charts</a></li>
+                            <li><a data-toggle="pill" href="#newsFeeds"><span class="glyphicon glyphicon-link"></span> News Feeds</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                            <div id="currentStock" class="tab-pane fade in active">
+                                <h3>HOME</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            <div id="historicalCharts" class="tab-pane fade">
+                                <h3>Menu 1</h3>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            </div>
+                            <div id="newsFeeds" class="tab-pane fade">
+                                <h3>Menu 2</h3>
+                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
 
 </body>
