--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
             <div class="panel-body">
                 <h4 class="text-center">Stock Market Search</h4>
                 <form class="form" role="form">
-
                     <div class="form-group col-lg-9">
-                        <label class="control-label col-lg-4">
-                            Enter the stock name or symbol:<span style="color:red">*</span>
+                        <label class="control-label col-lg-4">Enter the stock name or symbol:<span style="color:red">*</span>
                         </label>
                         <div class="col-lg-8">
                             <input type="text" class="form-control" name="company" placeholder="Apple Inc or AAPL" required autofocus>
@@ -55,8 +53,6 @@
                         <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span> Get Quote</button>
                         <button type="reset" class="btn btn-default" onclick="resetForm()"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
                     </div>
-
-
                 </form>
 
                 <div class="col-lg-offset-9 col-lg-3">
@@ -148,11 +144,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-        $("[name='my-checkbox']").bootstrapSwitch();
-
-    </script>
 </body>
 
 </html>
