--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
-    <style>
-        body {
-            padding-top: 10px;
-            background-color: #1c506f;
-        }
-
-    </style>
+    <script src="index.js"></script>
+    <link href="index.css" rel="stylesheet">
 
 </head>
 
@@ -43,10 +38,10 @@
                 <h4 class="text-center">Stock Market Search</h4>
                 <form class="form" role="form">
                     <div class="form-group col-lg-9">
-                        <label class="control-label col-lg-4">Enter the stock name or symbol:<span style="color:red">*</span>
+                        <label class="control-label col-lg-4">Enter the stock name or symbol:<span class="text-danger">*</span>
                         </label>
                         <div class="col-lg-8">
-                            <input type="text" class="form-control" name="company" placeholder="Apple Inc or AAPL" required autofocus>
+                            <input type="text" class="form-control" name="company" id="inputText" placeholder="Apple Inc or AAPL" required autofocus>
                         </div>
                     </div>
                     <div class="form-group col-lg-3">
@@ -54,10 +49,16 @@
                         <button type="reset" class="btn btn-default" onclick="resetForm()"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
                     </div>
                 </form>
-
-                <div class="col-lg-offset-9 col-lg-3">
-                    <label class="control-label">Powered By: </label>
-                    <a href="https://www.markit.com/product/markit-on-demand"><img src="http://cs-server.usc.edu:45678/hw/hw8/images/mod-logo.png" height="17" width="150"></a>
+                <div>
+                </div>
+                <div>
+                    <div class="col-lg-offset-3 col-lg-6">
+                        <div class="text-danger" id="validationMessage">Select a valid entry</div>
+                    </div>
+                    <div class=" col-lg-3">
+                        <label class="control-label">Powered By: </label>
+                        <a href="https://www.markit.com/product/markit-on-demand"><img src="http://cs-server.usc.edu:45678/hw/hw8/images/mod-logo.png" height="17" width="150"></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -141,6 +142,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
