--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Homework 8</title>
 
     <!-- Latest compiled and minified jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -26,8 +28,8 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
-    <script src="index.js"></script>
-    <link href="index.css" rel="stylesheet">
+    <script src="action.js" type="text/javascript"></script>
+    <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -38,14 +40,14 @@
                 <h4 class="text-center">Stock Market Search</h4>
                 <form class="form" role="form">
                     <div class="form-group col-lg-9">
-                        <label class="control-label col-lg-4">Enter the stock name or symbol:<span class="text-danger">*</span>
+                        <label class="control-label col-lg-4" for="inputText">Enter the stock name or symbol:<span class="text-danger">*</span>
                         </label>
                         <div class="col-lg-8">
                             <input type="text" class="form-control" name="company" id="inputText" placeholder="Apple Inc or AAPL" required autofocus>
                         </div>
                     </div>
                     <div class="form-group col-lg-3">
-                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span> Get Quote</button>
+                        <button type="submit" name="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span> Get Quote</button>
                         <button type="reset" class="btn btn-default" onclick="resetForm()"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
                     </div>
                 </form>
