--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Homework 8</title>
 
     <!-- Latest compiled and minified jQuery -->
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -28,9 +28,12 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
+
+    <!-- Moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
+
     <script src="action.js" type="text/javascript"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
@@ -43,7 +46,7 @@
                         <label class="control-label col-lg-4" for="inputText">Enter the stock name or symbol:<span class="text-danger">*</span>
                         </label>
                         <div class="col-lg-8">
-                            <input type="text" class="form-control" name="company" id="inputText" placeholder="Apple Inc or AAPL" required autofocus>
+                            <input type="text" class="form-control" name="symbol" id="inputText" placeholder="Apple Inc or AAPL" required autofocus value="AAPL">
                         </div>
                     </div>
                     <div class="form-group col-lg-3">
@@ -55,7 +58,7 @@
                 </div>
                 <div>
                     <div class="col-lg-offset-3 col-lg-6">
-                        <div class="text-danger" id="validationMessage">Select a valid entry</div>
+                        <div class="text-danger" id="message"></div>
                     </div>
                     <div class=" col-lg-3">
                         <label class="control-label">Powered By: </label>
@@ -87,7 +90,7 @@
                                         Automatic Refresh:
                                         <input type="checkbox" data-toggle="toggle">
                                         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
-                                        <button type="submit" class="btn btn-default" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></button>
+                                        <button type="submit" class="btn btn-default" id="nextSlide" href="#myCarousel" data-slide="next" disabled><span class="glyphicon glyphicon-chevron-right"></span></button>
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -124,11 +127,73 @@
                                         <li><a data-toggle="pill" href="#historicalCharts"><span class="glyphicon glyphicon-stats"></span> Historical Charts</a></li>
                                         <li><a data-toggle="pill" href="#newsFeeds"><span class="glyphicon glyphicon-link"></span> News Feeds</a></li>
                                     </ul>
-
+                                    <hr>
                                     <div class="tab-content">
                                         <div id="currentStock" class="tab-pane fade in active">
-                                            <h3>HOME</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                            <div class="container-fluid">
+                                                <div class="col-lg-6">
+                                                    <label>Stock Details</label>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="pull-right">
+                                                        <a href="."><img id="shareBotton" src="fb.ico"></a>
+                                                        <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-star"></span></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-6" id="stockDetails">
+                                                    <table class="table table-striped">
+                                                        <tr>
+                                                            <th>Name</th>
+                                                            <td id="Name"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Symbol</th>
+                                                            <td id="Symbol"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Last Price</th>
+                                                            <td id="LastPrice"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Change (Change Percent)</th>
+                                                            <td id="Change"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Time and Date</th>
+                                                            <td id="Timestamp"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Market Cap</th>
+                                                            <td id="MarketCap"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Volume</th>
+                                                            <td id="Volume"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Change YTD (Change Percent YTD)</th>
+                                                            <td id="ChangeYTD"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>High Price</th>
+                                                            <td id="High"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Low Price</th>
+                                                            <td id="Low"></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Opening Price</th>
+                                                            <td id="Open"></td>
+                                                        </tr>
+                                                    </table>
+                                                </div>
+                                                <div class="col-lg-6" id="stockChart">
+                                                    <img id="stockChartImage" width="100%">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div id="historicalCharts" class="tab-pane fade">
                                             <h3>Menu 1</h3>
@@ -148,6 +213,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
