--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="pull-right">
-                                                        <a href="."><img id="shareBotton" src="fb.ico"></a>
-                                                        <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-star"></span></button>
+                                                        <a href="."><img id="shareButton" src="fb.ico"></a>
+                                                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-star" id="favoriteStar"></span></button>
                                                     </div>
                                                 </div>
                                             </div>
