--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+ 
+ 
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 
     <!-- Toggle -->
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
 
-    <!-- Moment -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
 
-    <script src="action.js" type="text/javascript"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -84,16 +79,16 @@
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="panel panel-default">
-                                <div class="panel-heading">
+                                <div class="panel-heading clearfix">
                                     <label>Favorite List</label>
                                     <div class="pull-right">
-                                        Automatic Refresh:
+                                        <span class="hidden-xs">Automatic Refresh:</span>
                                         <input type="checkbox" data-toggle="toggle">
                                         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
                                         <button type="submit" class="btn btn-default" id="nextSlide" href="#myCarousel" data-slide="next" disabled><span class="glyphicon glyphicon-chevron-right"></span></button>
                                     </div>
                                 </div>
-                                <div class="panel-body">
+                                <div class="panel-body table-responsive">
                                     <table class="table table-striped">
                                         <tr>
                                             <th>Symbol</th>
@@ -123,9 +118,9 @@
                                 </div>
                                 <div class="panel-body">
                                     <ul class="nav nav-pills">
-                                        <li class="active"><a data-toggle="pill" href="#currentStock"><span class="glyphicon glyphicon-dashboard"></span> Current Stock</a></li>
-                                        <li><a data-toggle="pill" href="#historicalCharts"><span class="glyphicon glyphicon-stats"></span> Historical Charts</a></li>
-                                        <li><a data-toggle="pill" href="#newsFeeds"><span class="glyphicon glyphicon-link"></span> News Feeds</a></li>
+                                        <li class="active"><a data-toggle="pill" href="#currentStock"><span class="glyphicon glyphicon-dashboard"></span><span class="hidden-xs"> Current</span> Stock</a></li>
+                                        <li><a data-toggle="pill" href="#historicalCharts"><span class="glyphicon glyphicon-stats"></span><span class="hidden-xs">  Historical</span> Charts</a></li>
+                                        <li><a data-toggle="pill" href="#newsFeeds"><span class="glyphicon glyphicon-link"></span> News<span class="hidden-xs">  Feeds</span></a></li>
                                     </ul>
                                     <hr>
                                     <div class="tab-content">
@@ -199,9 +194,7 @@
                                             <h3>Menu 1</h3>
                                             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                         </div>
-                                        <div id="newsFeeds" class="tab-pane fade">
-                                        
-                                        </div>
+                                        <div id="newsFeeds" class="tab-pane fade"></div>
                                     </div>
                                 </div>
                             </div>
@@ -212,7 +205,19 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+    <!-- Moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
+
+    <!-- highstock -->
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
+
+    <script src="action.js" type="text/javascript"></script>
 </body>
 
 </html>
