--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
 <body>
     <script>
         window.fbAsyncInit = function() {
+
             FB.init({
                 appId      : '1711542895751294',
                 xfbml      : false,
                 version    : 'v2.5'
             });
-            // FB.ui({
-            //     method: 'share',
-            //     href: 'https://developers.facebook.com/docs/'
-            // }, function(response){});
+            FB.ui({
+                method: 'share',
+                href: 'https://developers.facebook.com/docs/'
+            }, function(response){});
         };
 
         (function(d, s, id){
@@ -106,12 +107,12 @@
                                     <div class="pull-right">
                                         <span class="hidden-xs">Automatic Refresh:</span>
                                         <input type="checkbox" data-toggle="toggle">
-                                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
+                                        <button type="submit" class="btn btn-default" id="loadFavoriteListFromLocalStorage()"><span class="glyphicon glyphicon-refresh"></span></button>
                                         <button type="submit" class="btn btn-default" id="nextSlide" href="#myCarousel" data-slide="next" disabled><span class="glyphicon glyphicon-chevron-right"></span></button>
                                     </div>
                                 </div>
                                 <div class="panel-body table-responsive">
-                                    <table class="table table-striped">
+                                    <table class="table table-striped" id="favoriteListTable">
                                         <tr>
                                             <th>Symbol</th>
                                             <th>Company Name</th>
@@ -154,7 +155,7 @@
                                                 <div class="col-lg-6">
                                                     <div class="pull-right">
                                                         <a href="."><img id="shareButton" src="fb.ico"></a>
-                                                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-star" id="favoriteStar"></span></button>
+                                                        <button type="submit" class="btn btn-default" id="favoriteStarButton"><span class="glyphicon glyphicon-star" id="favoriteStar"></span></button>
                                                     </div>
                                                 </div>
                                             </div>
