+ validation before get quote

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 xfbml      : false,
                 version    : 'v2.5'
             });
-            FB.ui({
-                method: 'share',
-                href: 'https://developers.facebook.com/docs/'
-            }, function(response){});
+            // FB.ui({
+            //     method: 'share',
+            //     href: 'https://developers.facebook.com/docs/'
+            // }, function(response){});
         };
 
         (function(d, s, id){
