--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <label class="control-label col-lg-4" for="inputText">Enter the stock name or symbol:<span class="text-danger">*</span>
                         </label>
                         <div class="col-lg-8">
-                            <input type="text" class="form-control" name="symbol" id="inputText" placeholder="Apple Inc or AAPL" required autofocus value="AAPL">
+                            <input type="text" class="form-control" name="symbol" id="inputText" placeholder="Apple Inc or AAPL" required autofocus>
                         </div>
                     </div>
                     <div class="form-group col-lg-3">
@@ -105,10 +105,12 @@
                                 <div class="panel-heading clearfix">
                                     <label>Favorite List</label>
                                     <div class="pull-right">
-                                        <span class="hidden-xs">Automatic Refresh:</span>
-                                        <input type="checkbox" data-toggle="toggle">
-                                        <button type="submit" class="btn btn-default" id="loadFavoriteListFromLocalStorage()"><span class="glyphicon glyphicon-refresh"></span></button>
-                                        <button type="submit" class="btn btn-default" id="nextSlide" href="#myCarousel" data-slide="next" disabled><span class="glyphicon glyphicon-chevron-right"></span></button>
+                                        <span title="Automatically refresh your favorite list">
+                                            <span class="hidden-xs">Automatic Refresh:</span>
+                                            <input type="checkbox" data-toggle="toggle" id="autoRefreshToggle">
+                                        </span>
+                                        <button type="submit" class="btn btn-default" onclick="partialRefreshFavoriteList()" title="Refresh your favorite list"><span class="glyphicon glyphicon-refresh"></span></button>
+                                        <button type="submit" class="btn btn-default" id="nextSlide" href="#myCarousel" data-slide="next" title="Go to stock information" disabled><span class="glyphicon glyphicon-chevron-right"></span></button>
                                     </div>
                                 </div>
                                 <div class="panel-body table-responsive">
